# Agent-Monitoring-Debugging

./: .env.example  .gitignore  LICENSE  Makefile  README.MD  docker-compose.yml  pyproject.toml
sdk/: pyproject.toml
sdk/src/vigil/: __init__.py  _client.py  _config.py  _context.py  _exporter.py  _trace_context.py  _types.py  convenience.py  decorators.py
sdk/src/vigil/integrations/: __init__.py  anthropic.py  openai.py
sdk/tests/: conftest.py  test_client.py  test_config.py  test_context.py  test_convenience.py  test_decorators.py  test_exporter.py  test_exporter_edge_cases.py  test_integrations.py  test_trace_context.py  test_types.py
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_add_indexes.py  003_add_users.py  004_add_replay_external_id.py  005_add_project_settings_and_notifications.py
server/src/vigil_server/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py
server/src/vigil_server/api/: health.py  router.py
server/src/vigil_server/db/: repository.py  session.py
server/src/vigil_server/middleware/: auth.py  rate_limit.py  request_id.py
server/src/vigil_server/models/: __init__.py  base.py  drift.py  notification.py  project.py  project_settings.py  replay.py  span.py  (+2 more)
server/tests/: conftest.py  test_auth.py  test_drift.py  test_encryption.py  test_ingest.py  test_llm_executor.py  test_notifications.py  test_projects.py  test_replay.py  test_replay_execution.py  test_scheduler.py  test_traces_api.py  test_validation.py  test_websocket.py
(+82 files in other folders)
