[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-server"
version = "0.1.0"
description = "Vigil: FastAPI server for AI agent observability"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0,<6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vigil_server"]
